--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.9",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
